added separate script file with slider items' animation and 'show all' button in news section

--- a/scss/blocks/btn.scss
+++ b/scss/blocks/btn.scss
@@ -21,10 +21,14 @@
   background-color: #e8e8e8;
   margin: 0 auto;
   padding-bottom: 15px;
+  cursor: pointer;
   &:hover{
     background-color: #ffb144;
     color: white;
   }
+}
+.btn--shown{
+
 }
 .btn--article{
   position: absolute;
