--- a/scss/blocks/slider-block.scss
+++ b/scss/blocks/slider-block.scss
@@ -30,10 +30,6 @@
   padding-top: 30px;
   padding-bottom: 170px;
   z-index: 2!important;
-  //z-index: 11!important;
-  //.slider-block__item{
-  //  z-index: 11!important;
-  //}
 }
 .slider-block__item{
   position: relative;
@@ -41,8 +37,6 @@
   border: 1px solid #bcbcbc;
   transition: border-color .3s ease-out;
   background-color: white;
-  //position: relative;
-  //z-index: 2;
   &:hover{
     border: 4.38px solid #ffb144;
     .slider-block__img-container{
@@ -56,6 +50,9 @@
       left: 0;
     }
   }
+}
+.slider-block__item--hidden{
+  display: none;
 }
 .slider-block__img-container{
   position: relative;
