--- a/scss/style.scss
+++ b/scss/style.scss
@@ -41,7 +41,7 @@ legend{
 @import "blocks/header.scss";
 @import "blocks/phone-block.scss";
 @import "blocks/main-menu.scss";
-@import "blocks/advertisement.scss";
+@import "blocks/top-slider";
 @import "blocks/main-content.scss";
 @import "blocks/product-categories.scss";
 @import "blocks/content-header.scss";
