--- a/scss/blocks/product-categories.scss
+++ b/scss/blocks/product-categories.scss
@@ -1,6 +1,3 @@
-.product-categories{
-
-}
 .product-categories__header{
   display: flex;
   align-items: center;
@@ -18,18 +15,6 @@
     align-self: center;
   }
 }
-/*.product-categories__navigation-dots{
-  display: flex;
-  li{
-    min-height: 19px;
-    min-width: 19px;
-    font-size: 12px;
-    padding: 0 4px;
-    margin-right: 12px;
-    border: 1px solid #d5d5d5;
-    text-align: center;
-  }
-}*/
 .product-categories__pdf-download{
   display: flex;
   font-size: 14px;
@@ -59,24 +44,12 @@
 }
 .product-categories__item{
   width: 270px;
-  //min-height: 115px;
   margin-bottom: 30px;
   background-color: #f1f1f1;
-  //position: relative;
   display: flex;
   a{
     display: block;
     position: relative;
-    //position: absolute;
-    //height: 100%;
-    /*&::before{
-      content: "";
-      display: block;
-      position: absolute;
-      width: calc(100% - 20px);
-      min-height: 115px;
-      border: 3px solid #d6d6d6;
-    }*/
     &::before, &::after{
       content: "";
       display: block;
@@ -87,8 +60,8 @@
       right: 10px;
       top: 10px;
     }
-    &::before{
-
+    &:hover{
+      background-color: #e8e8e8;
     }
     &::after{
       transform: rotate(90deg);
@@ -123,8 +96,6 @@
       background: url("../images/products_items/item9.png") -22px -11px no-repeat;
     }
   }
-
-
 }
 .product-categories__item-bg{
   display: block;
@@ -133,12 +104,10 @@
   width: 270px;
 }
 .product-categories__item-description{
-  //position: absolute;
   display: block;
   font-size: 16px;
   line-height: 20px;
   color: #424242;
-  //min-height: 115px;
   margin: 10px;
   min-height: 95px;
   border: 3px solid #d6d6d6;
